// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserPasswordField /> renders a passwordField 1`] = `
<Connect(UserPasswordComplexityField)
  field={
    <Field
      component={[Function]}
      divClassName="div"
      hideValidationMessage={false}
      id="id"
      label="label"
      labelClassName="label-class"
      name="password"
      onBlur={[Function]}
      onFocus={[Function]}
      type="password"
    />
  }
  formName="form-name"
  isPasswordFocus={false}
  name="password"
/>
`;

exports[`<UserPasswordField /> renders a passwordField 2`] = `
<Connect(UserPasswordComplexityField)
  field={
    <Field
      component={[Function]}
      divClassName="div"
      hideValidationMessage={true}
      id="id"
      label="label"
      labelClassName="label-class"
      name="password"
      onBlur={[Function]}
      onFocus={[Function]}
      type="password"
    />
  }
  formName="form-name"
  isPasswordFocus={true}
  name="password"
/>
`;

exports[`<UserPasswordField /> renders a passwordField 3`] = `
<Connect(UserPasswordComplexityField)
  field={
    <Field
      component={[Function]}
      divClassName="div"
      hideValidationMessage={false}
      id="id"
      label="label"
      labelClassName="label-class"
      name="password"
      onBlur={[Function]}
      onFocus={[Function]}
      type="password"
    />
  }
  formName="form-name"
  isPasswordFocus={false}
  name="password"
/>
`;
